--- a/simulator-config.properties
+++ b/simulator-config.properties
@@ -1,2 +1,3 @@
 # eg. rootOid=<ctmHandlerClassName>,<randomNetWorkDelayMsSeed>,<randomErrorSeed>
 1.3.6.1.4.1.20=CtmEnergyHandler,2000,
+1.3.6.1.4.1.20@=RelayHandler,2000,
